hphp/test/slow/hack_mode/closing-tag-php.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/hack_mode/closing-tag-php.php on line 4
